--- a/02_Herramientas_Avanzadas/Sprint_04/Unidad_01_Pandas_I/01_Workout/03_Series_III.ipynb
+++ b/02_Herramientas_Avanzadas/Sprint_04/Unidad_01_Pandas_I/01_Workout/03_Series_III.ipynb
@@ -28,10 +28,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -48,24 +50,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "California    38332521\n",
+       "Texas         26448193\n",
+       "New York       1961127\n",
+       "Florida       19552860\n",
+       "Illinois      12882135\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "population_dict = {\"California\": 38332521,\n",
+    "                   \"Texas\": 26448193,\n",
+    "                   \"New York\": 1961127,\n",
+    "                   \"Florida\": 19552860,\n",
+    "                   \"Illinois\": 12882135}\n",
+    "population = pd.Series(population_dict)\n",
+    "population"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([38332521, 26448193,  1961127, 19552860, 12882135])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "population.values"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['California', 'Texas', 'New York', 'Florida', 'Illinois'], dtype='object')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "population.index"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -77,10 +129,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(12882135)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "population[\"Illinois\"]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -91,15 +156,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "California    38332521\n",
+       "Texas         26448193\n",
+       "New York       1961127\n",
+       "Florida       19552860\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "population[\"California\":\"Florida\"]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -120,15 +202,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RangeIndex(start=0, stop=3, step=1)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "serie_ejemplo = pd.Series([2,4,6])\n",
+    "serie_ejemplo.index"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -139,10 +235,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100    Casa\n",
+       "200    Casa\n",
+       "300    Casa\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "serie_repetida = pd.Series(\"Casa\", index = [100, 200, 300])\n",
+    "serie_repetida"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -153,15 +266,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2    a\n",
+       "4    b\n",
+       "6    c\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "serie_dict = pd.Series({2: \"a\", 4: \"b\", 6: \"c\"})\n",
+    "serie_dict"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -172,15 +302,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2    a\n",
+       "6    c\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "serie_dict_alt = pd.Series({2: \"a\", 4: \"b\", 6: \"c\"}, \n",
+    "                           index = [2,6])\n",
+    "serie_dict_alt"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -199,7 +346,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -213,7 +360,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
