--- a/02_Herramientas_Avanzadas/Sprint_04/Unidad_01_Pandas_I/02_Ejercicios_Workout/14_Ejercicios_Series.ipynb
+++ b/02_Herramientas_Avanzadas/Sprint_04/Unidad_01_Pandas_I/02_Ejercicios_Workout/14_Ejercicios_Series.ipynb
@@ -51,10 +51,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "import pandas as pd"
    ]
   },
@@ -95,10 +96,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Mum     45\n",
+       "Dad     46\n",
+       "Jing    12\n",
+       "Jang    10\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "serie = pd.Series([45, 46, 12, 10],\n",
+    "                  index = [\"Mum\", \"Dad\", \"Jing\", \"Jang\"])\n",
+    "serie"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -116,10 +136,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Serie A    2002\n",
+       "Serie B    2005\n",
+       "Serie C    1995\n",
+       "Serie D    2010\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "serie_series = pd.Series([2002, 2005, 1995, 2010], \n",
+    "                         index=[\"Serie A\", \"Serie B\", \"Serie C\", \"Serie D\"])\n",
+    "\n",
+    "serie_series"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -137,10 +177,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(30)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "año_actual = 2025\n",
+    "años_antiguedad = año_actual - serie_series.min()\n",
+    "años_antiguedad"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -158,10 +213,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30 15\n"
+     ]
+    }
+   ],
+   "source": [
+    "años_antiguedad = año_actual - serie_series.min()\n",
+    "años_antiguedad2 = año_actual - serie_series.max()\n",
+    "print(años_antiguedad, años_antiguedad2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -179,10 +246,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Serie D'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "indice_reciente = serie_series.idxmax()\n",
+    "indice_reciente"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -200,10 +281,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dad     46\n",
+       "Jing    12\n",
+       "Jang    10\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "no_mum = serie[\"Dad\":]\n",
+    "no_mum"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -221,10 +319,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    DataScience\n",
+      "1    DataScience\n",
+      "2    DataScience\n",
+      "3    DataScience\n",
+      "4    DataScience\n",
+      "5    DataScience\n",
+      "6    DataScience\n",
+      "7    DataScience\n",
+      "8    DataScience\n",
+      "9    DataScience\n",
+      "dtype: object\n",
+      "0    DataScience\n",
+      "1    DataScience\n",
+      "2    DataScience\n",
+      "3    DataScience\n",
+      "4    DataScience\n",
+      "5      TheBridge\n",
+      "6    DataScience\n",
+      "7    DataScience\n",
+      "8       Bootcamp\n",
+      "9    DataScience\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "serie = pd.Series(np.full(10, \"DataScience\"))\n",
+    "print(serie)\n",
+    "serie[5] = \"TheBridge\"\n",
+    "serie[8] = \"Bootcamp\"\n",
+    "print(serie)"
+   ]
   },
   {
    "cell_type": "code",
@@ -236,7 +369,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Curso_Online_DATA",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -250,7 +383,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
