--- a/02_Herramientas_Avanzadas/Sprint_04/Unidad_01_Pandas_I/02_Ejercicios_Workout/15_Ejercicios_DataFrame.ipynb
+++ b/02_Herramientas_Avanzadas/Sprint_04/Unidad_01_Pandas_I/02_Ejercicios_Workout/15_Ejercicios_DataFrame.ipynb
@@ -51,10 +51,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "import pandas as pd"
    ]
   },
@@ -76,10 +77,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Libro 1    22\n",
+       "Libro 2    25\n",
+       "Libro 3    15\n",
+       "Libro 4    16\n",
+       "Libro 5    20\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "serie = pd.Series([22, 25, 15, 16, 20], \n",
+    "                  index = [\"Libro 1\", \"Libro 2\",\n",
+    "                             \"Libro 3\", \"Libro 4\", \"Libro 5\"])\n",
+    "\n",
+    "serie"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -99,10 +122,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Libro 1    Autor 1\n",
+       "Libro 2    Autor 2\n",
+       "Libro 3    Autor 3\n",
+       "Libro 4    Autor 4\n",
+       "Libro 5    Autor 5\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "serie2 = pd.Series([\"Autor 1\", \"Autor 2\", \"Autor 3\", \"Autor 4\", \"Autor 5\"], \n",
+    "                  index = [\"Libro 1\", \"Libro 2\",\n",
+    "                             \"Libro 3\", \"Libro 4\", \"Libro 5\"])\n",
+    "serie2"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -120,10 +164,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Etapa</th>\n",
+       "      <th>Escrito por</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Libro 1</th>\n",
+       "      <td>22</td>\n",
+       "      <td>Autor 1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Libro 2</th>\n",
+       "      <td>25</td>\n",
+       "      <td>Autor 2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Libro 3</th>\n",
+       "      <td>15</td>\n",
+       "      <td>Autor 3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Libro 4</th>\n",
+       "      <td>16</td>\n",
+       "      <td>Autor 4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Libro 5</th>\n",
+       "      <td>20</td>\n",
+       "      <td>Autor 5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Etapa Escrito por\n",
+       "Libro 1     22     Autor 1\n",
+       "Libro 2     25     Autor 2\n",
+       "Libro 3     15     Autor 3\n",
+       "Libro 4     16     Autor 4\n",
+       "Libro 5     20     Autor 5"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict_libros = {\"Etapa\": serie, \"Escrito por\": serie2}\n",
+    "df_ejemplo = pd.DataFrame(dict_libros)\n",
+    "df_ejemplo"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -141,10 +258,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[22 'Autor 1']\n",
+      " [25 'Autor 2']\n",
+      " [15 'Autor 3']\n",
+      " [16 'Autor 4']\n",
+      " [20 'Autor 5']]\n",
+      "Index(['Libro 1', 'Libro 2', 'Libro 3', 'Libro 4', 'Libro 5'], dtype='object')\n",
+      "Index(['Etapa', 'Escrito por'], dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df_ejemplo.values)\n",
+    "print(df_ejemplo.index)\n",
+    "print(df_ejemplo.columns)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -162,10 +297,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Libro 1    22\n",
+      "Libro 2    25\n",
+      "Libro 3    15\n",
+      "Libro 4    16\n",
+      "Libro 5    20\n",
+      "Name: Etapa, dtype: int64\n",
+      "Libro 1    Autor 1\n",
+      "Libro 2    Autor 2\n",
+      "Libro 3    Autor 3\n",
+      "Libro 4    Autor 4\n",
+      "Libro 5    Autor 5\n",
+      "Name: Escrito por, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df_ejemplo[\"Etapa\"])\n",
+    "print(df_ejemplo[\"Escrito por\"])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -183,10 +340,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Etapa               25\n",
+       "Escrito por    Autor 2\n",
+       "Name: Libro 2, dtype: object"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_ejemplo.loc[\"Libro 1\"]\n",
+    "df_ejemplo.loc[\"Libro 2\"]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -204,10 +377,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          unidad_1  unidad_2\n",
+      "Sprint_1         4         2\n",
+      "Sprint_2         5         3\n",
+      "Sprint_3         3         5\n"
+     ]
+    }
+   ],
+   "source": [
+    "tiempos_dict = [\"Sprint_\" + str(i) for i in range(1, 4)]\n",
+    "\n",
+    "unidad_1 = [4, 5, 3]\n",
+    "unidad_2 = [2, 3, 5]\n",
+    "\n",
+    "dict_def = {\n",
+    "    \"unidad_1\": unidad_1,\n",
+    "    \"unidad_2\": unidad_2\n",
+    "}\n",
+    "\n",
+    "tiempos = pd.DataFrame(dict_def, index=tiempos_dict)\n",
+    "\n",
+    "print(tiempos)"
+   ]
   },
   {
    "cell_type": "code",
@@ -219,7 +417,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Curso_Online_DATA",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -233,7 +431,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
