--- a/02_Herramientas_Avanzadas/Sprint_04/Unidad_01_Pandas_I/02_Ejercicios_Workout/16_Ejercicios_Seleccion.ipynb
+++ b/02_Herramientas_Avanzadas/Sprint_04/Unidad_01_Pandas_I/02_Ejercicios_Workout/16_Ejercicios_Seleccion.ipynb
@@ -51,14 +51,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,10 +95,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Don Quijote                                  500\n",
+       "La Biblia                                   2500\n",
+       "El Corán                                     800\n",
+       "Un cuento de Navidad                         200\n",
+       "El Principito                                142\n",
+       "El Señor de los Anillos                      150\n",
+       "El Alquimista                                 65\n",
+       "Harry Potter y la Piedra Filosofal           120\n",
+       "Y pensar que lo vi por la calle Porvenir      60\n",
+       "El Código Da Vinci                            80\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "top_books = pd.Series(ventas, index = books)\n",
+    "top_books"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -115,10 +141,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Titulo Don Quijote, ventas 500\n",
+      "Titulo La Biblia, ventas 2500\n",
+      "Titulo El Corán, ventas 800\n",
+      "Titulo Un cuento de Navidad, ventas 200\n",
+      "Titulo El Principito, ventas 142\n",
+      "Titulo El Señor de los Anillos, ventas 150\n",
+      "Titulo El Alquimista, ventas 65\n",
+      "Titulo Harry Potter y la Piedra Filosofal, ventas 120\n",
+      "Titulo Y pensar que lo vi por la calle Porvenir, ventas 60\n",
+      "Titulo El Código Da Vinci, ventas 80\n"
+     ]
+    }
+   ],
+   "source": [
+    "for indice, valor in top_books.items():\n",
+    "    print(f\"Titulo {indice}, ventas {valor}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -136,10 +182,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Don Quijote', 'La Biblia', 'El Corán', 'Un cuento de Navidad'], dtype='object')"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "top_books.loc[top_books.values >= 200].index"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -157,10 +216,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Don Quijote                                  500\n",
+       "La Biblia                                   2500\n",
+       "El Corán                                     800\n",
+       "Un cuento de Navidad                         200\n",
+       "El Principito                                142\n",
+       "El Señor de los Anillos                      150\n",
+       "El Alquimista                                 65\n",
+       "Harry Potter y la Piedra Filosofal           120\n",
+       "Y pensar que lo vi por la calle Porvenir      60\n",
+       "El Código Da Vinci                            80\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "top_books"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([150,  65])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "top_books.loc[[\"El Señor de los Anillos\", \"El Alquimista\"]].values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([150,  65])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "top_books.iloc[5:7].values"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -178,10 +300,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1             Don Quijote\n",
+      "3               La Biblia\n",
+      "4                El Corán\n",
+      "8    Un cuento de Navidad\n",
+      "dtype: object\n",
+      "La Biblia\n",
+      "Un cuento de Navidad\n"
+     ]
+    }
+   ],
+   "source": [
+    "serie = pd.Series(top_books[:4].index,\n",
+    "                  index = [1,3,4,8])\n",
+    "print(serie)\n",
+    "print(serie.loc[3])\n",
+    "print(serie.iloc[3])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -199,10 +341,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0     500\n",
+      "1    2500\n",
+      "2     800\n",
+      "3     200\n",
+      "4     142\n",
+      "5     150\n",
+      "6      65\n",
+      "7     120\n",
+      "8      60\n",
+      "9      80\n",
+      "Name: Ventas, dtype: int64\n",
+      "0     500\n",
+      "1    2500\n",
+      "2     800\n",
+      "3     200\n",
+      "4     142\n",
+      "5     150\n",
+      "6      65\n",
+      "7     120\n",
+      "8      60\n",
+      "9      80\n",
+      "Name: Ventas, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "dict_df = {\"Títulos!\": books,\n",
+    "           \"Ventas\": ventas}\n",
+    "df = pd.DataFrame(dict_df)\n",
+    "\n",
+    "print(df[\"Ventas\"])\n",
+    "print(df.loc[:,\"Ventas\"])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -220,10 +398,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0                                 Don Quijote\n",
+      "1                                   La Biblia\n",
+      "2                                    El Corán\n",
+      "3                        Un cuento de Navidad\n",
+      "4                               El Principito\n",
+      "5                     El Señor de los Anillos\n",
+      "6                               El Alquimista\n",
+      "7          Harry Potter y la Piedra Filosofal\n",
+      "8    Y pensar que lo vi por la calle Porvenir\n",
+      "9                          El Código Da Vinci\n",
+      "Name: Títulos!, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df[\"Títulos!\"])\n",
+    "# print(df.Títulos!)\n",
+    "# No es posible por el formato del texto, no se puede representar como una variable"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -243,8 +443,31 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    UNK\n",
+       "1    UNK\n",
+       "2    UNK\n",
+       "3    UNK\n",
+       "4    UNK\n",
+       "5    UNK\n",
+       "7    UNK\n",
+       "9    UNK\n",
+       "Name: idioma_original, dtype: object"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lst = [\"UNK\" for i in range(len(top_books.index))]\n",
+    "# df[\"idioma_original\"] = lst\n",
+    "df[\"idioma_original\"] = \"UNK\""
+   ]
   },
   {
    "cell_type": "markdown",
@@ -262,10 +485,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Títulos!</th>\n",
+       "      <th>Ventas</th>\n",
+       "      <th>idioma_original</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Don Quijote</td>\n",
+       "      <td>500</td>\n",
+       "      <td>UNK</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>La Biblia</td>\n",
+       "      <td>2500</td>\n",
+       "      <td>UNK</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>El Corán</td>\n",
+       "      <td>800</td>\n",
+       "      <td>UNK</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Un cuento de Navidad</td>\n",
+       "      <td>200</td>\n",
+       "      <td>UNK</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>El Principito</td>\n",
+       "      <td>142</td>\n",
+       "      <td>UNK</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>El Señor de los Anillos</td>\n",
+       "      <td>150</td>\n",
+       "      <td>UNK</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Harry Potter y la Piedra Filosofal</td>\n",
+       "      <td>120</td>\n",
+       "      <td>UNK</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>El Código Da Vinci</td>\n",
+       "      <td>80</td>\n",
+       "      <td>UNK</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                             Títulos!  Ventas idioma_original\n",
+       "0                         Don Quijote     500             UNK\n",
+       "1                           La Biblia    2500             UNK\n",
+       "2                            El Corán     800             UNK\n",
+       "3                Un cuento de Navidad     200             UNK\n",
+       "4                       El Principito     142             UNK\n",
+       "5             El Señor de los Anillos     150             UNK\n",
+       "7  Harry Potter y la Piedra Filosofal     120             UNK\n",
+       "9                  El Código Da Vinci      80             UNK"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[df[\"Ventas\"] > 70]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -282,9 +603,71 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>idioma_original</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>UNK</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>UNK</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>UNK</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>UNK</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  idioma_original\n",
+       "4             UNK\n",
+       "5             UNK\n",
+       "7             UNK\n",
+       "9             UNK"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[(df[\"Ventas\"] > 65) & (df[\"Ventas\"] < 200), [\"idioma_original\"]]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -301,14 +684,117 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Títulos!</th>\n",
+       "      <th>idioma_original</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Don Quijote</td>\n",
+       "      <td>UNK</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>La Biblia</td>\n",
+       "      <td>UNK</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>El Corán</td>\n",
+       "      <td>UNK</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Un cuento de Navidad</td>\n",
+       "      <td>UNK</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>El Principito</td>\n",
+       "      <td>UNK</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>El Señor de los Anillos</td>\n",
+       "      <td>UNK</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>El Alquimista</td>\n",
+       "      <td>UNK</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Harry Potter y la Piedra Filosofal</td>\n",
+       "      <td>UNK</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Y pensar que lo vi por la calle Porvenir</td>\n",
+       "      <td>UNK</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>El Código Da Vinci</td>\n",
+       "      <td>UNK</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                   Títulos! idioma_original\n",
+       "0                               Don Quijote             UNK\n",
+       "1                                 La Biblia             UNK\n",
+       "2                                  El Corán             UNK\n",
+       "3                      Un cuento de Navidad             UNK\n",
+       "4                             El Principito             UNK\n",
+       "5                   El Señor de los Anillos             UNK\n",
+       "6                             El Alquimista             UNK\n",
+       "7        Harry Potter y la Piedra Filosofal             UNK\n",
+       "8  Y pensar que lo vi por la calle Porvenir             UNK\n",
+       "9                        El Código Da Vinci             UNK"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[[\"Títulos!\", \"idioma_original\"]]"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Curso_Online_DATA",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -322,7 +808,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
